Breadcrum spacing issue
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@672 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common.css
@@ -44,10 +44,10 @@
 
 @media only screen and (max-width: 768px) {
     .hds-global-header .breadcrumb-container {
-        /*top: 200px;*/ top:60px;
+        /*top: 200px;*/ top:100px;
     }
     .navbar-toggle {
-        background-color: #cc0000;
+        background-color: #cc000	0;
         padding: 12px 11px 12px 10px;
         margin: 0;
         border-radius: 0px;
